--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -1,6 +1,8 @@
+<section id="adminwrapper">
 <h1>Editing listing</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @listing %> |
 <%= link_to 'Back', listings_path %>
+</section>
