updated navigation in application

--- a/app/views/listings/home.html.erb
+++ b/app/views/listings/home.html.erb
@@ -8,7 +8,7 @@
                                 <div class="ch-info-front ch-img-1"></div>
                                 <div class="ch-info-back">
                                     <h3>How Many Bedrooms?</h3>
-                                    <p><input type="text" class="bedbathbar" placeholder="How Many Beds?"></p>
+                                    <input type="text" class="bedbathbar" placeholder="How Many Beds?">
                                 </div>  
                             </div>
                         </div>
@@ -19,7 +19,7 @@
                                 <div class="ch-info-front ch-img-2"></div>
                                 <div class="ch-info-back">
                                     <h3>How Many Bathrooms?</h3>
-                                    <p><input type="text" class="bedbathbar" placeholder="How many Baths?"></p>
+                                    <input type="text" class="bedbathbar" placeholder="How many Baths?">
                                 </div>
                             </div>
                         </div>
@@ -30,8 +30,8 @@
                                 <div class="ch-info-front ch-img-3"></div>
                                 <div class="ch-info-back">
                                     <h3>Rent Range?</h3>
-                                    <p><input type="text" class="bedbathbar" placeholder="Min Rent"></a></p>
-                                    <p><input type="text" class="bedbathbar" placeholder="Max Rent"></a></p>
+                                    <input type="text" class="bedbathbar" placeholder="Min Rent"></a>
+                                    <input type="text" class="bedbathbar" placeholder="Max Rent"></a>
                                 </div>
                             </div>
                         </div>
@@ -53,7 +53,7 @@
           <% end %>        
         </form>
   <br>
-  <p class="theme-apexb t-yellow"><br> What makes TranspaRent<br>Unique?</p>
+  <p class="theme-apexb t-yellow"><br><strong>Unique Features</strong></p>
 </section>  </section>
   <section id="tour" class="fake-page">
         <span class="top"></span>
