--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,13 +24,13 @@
 			<div class="shell">
 				<ul id="menu-main-navigation" class="menu">
 					<li id="menu-item-50" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-50">
-						<a href="#">Listings</a></li>
+						<a href="<%= new_listing_url %>">Listings</a></li>
 					<li id="menu-item-52" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-52">
-						<a href="#">List Apartment</a></li>
+						<a href="<%= new_listing_url %>">List Apartment</a></li>
 					<li id="menu-item-51" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-51">
 						<a href="#">Saved Searches</a></li>
 					<li id="menu-item-53" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-53">
-						<a href="#">My Favorites</a>	</li>
+						<a href="#">My Favorites</a></li>
 				</ul>
 			</div>
 		</div>
