--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
 				</div>
 						<a href="../login" class="blue-button contact-popup-link" style="color: white;">Sign In</a>
 						<a href="../users/new" class="blue-button popup-link cboxElement" style="color: white;">Sign Up</a>
-			<div class="shell">
-					</div>
+			<div id="headfoot" class="shell">
+			</div>
 	<div id="navigation" class="type2">
 		<div id="main-nav">
 			<div class="shell">
