--- a/app/views/listings/home.html.erb
+++ b/app/views/listings/home.html.erb
@@ -8,7 +8,7 @@
                                 <div class="ch-info-front ch-img-1"></div>
                                 <div class="ch-info-back">
                                     <h3>How Many Bedrooms?</h3>
-                                    <input type="text" class="bedbathbar" placeholder="How Many Beds?">
+                                    <span class="homebtnlabel">Beds:</span> <input type="text" class="homebbsearch" placeholder="# of Beds">
                                 </div>  
                             </div>
                         </div>
@@ -19,7 +19,7 @@
                                 <div class="ch-info-front ch-img-2"></div>
                                 <div class="ch-info-back">
                                     <h3>How Many Bathrooms?</h3>
-                                    <input type="text" class="bedbathbar" placeholder="How many Baths?">
+                                    <span class="homebtnlabel">Beds:</span> <input type="text" class="homebbsearch" placeholder="# of Baths">
                                 </div>
                             </div>
                         </div>
@@ -30,8 +30,9 @@
                                 <div class="ch-info-front ch-img-3"></div>
                                 <div class="ch-info-back">
                                     <h3>Rent Range?</h3>
-                                    <input type="text" class="bedbathbar" placeholder="Min Rent"></a>
-                                    <input type="text" class="bedbathbar" placeholder="Max Rent"></a>
+                                    <span class="homebtnlabel">Min</span>&nbsp;<span class="homebtnlabelmax">Max</span><br>
+                                    <input type="text" class="homerentsearch" placeholder="Min Rent"></a>
+                                    <input type="text" class="homerentsearch" placeholder="Max Rent"></a>
                                 </div>
                             </div>
                         </div>
