--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -100,8 +100,8 @@
           <div class='map'>  
             <%= gmaps({
 									"map_options" => @map_options,"markers" => { "data" => @markers}, "circles"     => { "data" => '[
-                         {"lng": -87.6500, "lat": 41.8500, "radius": 25000, "strokeColor": "#FF0000"}
-                         ]',
+                         {"lng": -87.6500, "lat": 41.8500, "radius": 15000, "strokeColor": "#FF0000"}
+                         ]',  "zoom" => 15
                       }})
 
                 %>
