--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -18,11 +18,9 @@ header, article, footer, aside, nav, section { display: block; }
 .notext { font-size: 0; line-height: 0; text-indent: -4000px; }
 .left { float: left; display: inline; }
 .right { float: right; display: inline; }
-
 .no-boxshadow .shadow { display: none; }
 
 // .shell { width: 982px; margin: 0 auto; padding: 0 9px; }
-
 // header.dark { background: #1a1a1a; position: relative; z-index: 10; box-shadow: 0 2px 2px rgba(0,0,0,0.9); }
 // header.dark .shell { height: 110px; position: relative; }
 // header.dark #logo { float: left; padding: 16px 0 0; }
@@ -62,14 +60,14 @@ footer.light .foot-nav a { word-spacing: 0; color: #000; }
 
 #intro { box-shadow: 0 0 200px rgba(0,0,0,0.9) inset; padding: 200px 0 125px; position: fixed; top: 0; left: 0; width: 100%; z-index: 1; min-height: 215px; text-align: center; }
 #intro #logo a { width: 435px; height: 125px; position: absolute; top: 132px; left: 50%; margin-left: -217px; text-align: left; }
-#intro h2 { font-size: 48px; color: #b7b7b7; word-spacing: 10px; text-shadow: 0 2px 2px #000; padding: 0 0 70px; }
+#intro h2 { font-size: 32px; color: #b7b7b7; word-spacing: 1px; text-shadow: 0 2px 2px #000; padding: 0 0 70px; }
 #intro p { font-size: 16px; }
 #intro .theme-big-blue-button { margin: 0 0 12px; }
 
 #tour { margin: 715px 0 0; position: relative; width: 100%; z-index: 2; padding: 20px 0 0; box-shadow: 0 0 40px rgba(0,0,0,0.15); border-bottom: 1px solid #fff; }
 #tour .top { width: 100%; height: 75px; position: absolute; top: -50px; left: 0; }
 #tour .content { background: #ececec; min-height: 718px; }
-#tour .shell { padding: 70px 9px 26px; }
+#tour .shell { padding: 0px 9px 26px; }
 #tour h2 { font-size: 30px; text-align: center; padding: 0 0 24px; }
 #tour .slide-info h3 { font-size: 21px; padding: 0 0 4px; }
 #tour p { font-size: 18px; line-height: 24px; }
@@ -107,11 +105,10 @@ footer.light .foot-nav a { word-spacing: 0; color: #000; }
 	@include sassy-button("matte", 5px, 19px, #cede85, #a7bf35, #fff, "inset");
 	font-size: 18px;
 	height: 45px;
-	margin-top: 5px;
+	margin-top: 30px;
 }
 
-
-  .ch-grid {
+.ch-grid {
     margin: -50px 0 0 0;
     padding: 0;
     list-style: none;
@@ -149,6 +146,7 @@ footer.light .foot-nav a { word-spacing: 0; color: #000; }
 	-ms-perspective: 900px;
 	perspective: 900px;
 }
+
 .ch-info{
 	position: absolute;
 	width: 100%;
@@ -159,6 +157,7 @@ footer.light .foot-nav a { word-spacing: 0; color: #000; }
 	-ms-transform-style: preserve-3d;
 	transform-style: preserve-3d;
 }
+
 .ch-info > div {
 	display: block;
 	position: absolute;
@@ -193,15 +192,15 @@ footer.light .foot-nav a { word-spacing: 0; color: #000; }
 }
 
 .ch-img-1 { 
-	background-image: url(/assets/orangebed.jpeg);
+	background-image: url(/assets/orange1.jpeg);
 }
 
 .ch-img-2 { 
-	background-image: url(/assets/2.jpeg);
+	background-image: url(/assets/green5.jpeg);
 }
 
 .ch-img-3 { 
-	background-image: url(/assets/3.jpg);
+	background-image: url(/assets/dollar3.jpeg);
 }
 
 .ch-info h3 {
@@ -212,7 +211,7 @@ footer.light .foot-nav a { word-spacing: 0; color: #000; }
 	margin: 0 15px;
 	padding: 60px 0 0 0;
 	height: 60px;
-	font-family: 'Open Sans', Arial, sans-serif;
+	font-family: 'HelveticaBold', Helvetica, Arial, sans-serif; 
 	text-shadow: 
 		0 0 1px #fff, 
 		0 1px 2px rgba(0,0,0,0.3);
@@ -237,7 +236,7 @@ footer.light .foot-nav a { word-spacing: 0; color: #000; }
 	font-size: 9px;
 	letter-spacing: 1px;
 	padding-top: 4px;
-	font-family: 'Open Sans', Arial, sans-serif;
+	font-family: 'HelveticaBold', Helvetica, Arial, sans-serif; 
 }
 
 .ch-info p a:hover {
@@ -263,10 +262,13 @@ footer.light .foot-nav a { word-spacing: 0; color: #000; }
 	opacity: 1;
 }
 
+.bedbathdrop {
+	margin-top: 100px;
+}
 
-/* HEADER SIGNIN SIGNUP CSS*/
-
-/******* /TinCanAPI WordPress CSS *******/
+.rentdrop {
+	margin-top: 80px;
+}
 
 a { color: #f05023; text-decoration: none; cursor: pointer; }
 a:hover { text-decoration: underline; }
@@ -276,7 +278,7 @@ h2 { font-size:24px; text-shadow: 0 1px 1px rgba(255,255,255,.3); -webkit-font-s
 h3,h4 { font-size:18px; font-family: 'HelveticaBold', Helvetica, Arial, sans-serif; font-weight:normal; line-height:22px;   }
 h4 { font-size:17px;  }
 
-input, textarea, select { font-size: 14px; font-family: 'HelveticaLight', Helvetica, Arial, sans-serif; }
+input, textarea, select { font-size: 12px; font-family: 'HelveticaLight', Helvetica, Arial, sans-serif; }
 textarea { overflow: auto; }
 
 ul, ol { list-style:none outside none }
