--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -23,47 +23,44 @@
             <a href="#" id="optarr" class="goleft" onclick="slidePaneloption('close')"><img src='/assets/arrowoverlay.png' /></a>
           </div></div>
           <div class="optionbody">
-            <table>
-              <tr>
-                  <th></th>
-                  <th>1</th>
-                  <th>2</th>
-                  <th>3</th>
-              </tr>
-              <tr>
-                  <td>Type</td>
-                  <td><input type="checkbox" name="row-1" data-col="1"></td>
-                  <td><input type="checkbox" name="row-1" data-col="2"></td>
-                  <td><input type="checkbox" name="row-1" data-col="3"></td>
-              </tr>
-              <tr>
-                  <td>Features</td>
-                  <td><input type="checkbox" name="row-2" data-col="1"></td>
-                  <td><input type="checkbox" name="row-2" data-col="2"></td>
-                  <td><input type="checkbox" name="row-2" data-col="3"></td>
-              </tr>
-              <tr>
-                  <td>List Date</td>
-                  <td><input type="checkbox" name="row-3" data-col="1"></td>
-                  <td><input type="checkbox" name="row-3" data-col="2"></td>
-                  <td><input type="checkbox" name="row-3" data-col="3"></td>
-            </tr>
-                    <tr>
-                  <td>Pets</td>
-                  <td><input type="checkbox" name="row-3" data-col="1"></td>
-                  <td><input type="checkbox" name="row-3" data-col="2"></td>
-            </tr>
-          </table>
+            <label for="fullname">Keyword:</label>
+            <input type="text" id="fullname" />
+            <p>Pets:</p>
+            <p><input type="checkbox" value="cats" id="cats" /> <label for="cats"> Cats</label></p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <p><input type="checkbox" value="dogs" id="dogs" /> <label for="dogs"> Dogs</label></p><br><br>
+            <p>Features:</p>
+            <p><input type="checkbox" value="inunit" id="inunit" /> <label for="inunit"> In Unity</label></p><br>
+            <p><input type="checkbox" value="onsite" id="onsite" /> <label for="onsite"> Laundry on-Site</label></p><br>
+            <p><input type="checkbox" value="ac" id="ac" /> <label for="ac"> Central HVAC</label></p><Br>
+            <p><input type="checkbox" value="heat" id="heat" /> <label for="heat"> Heat Included</label></p><br>
+            <p><input type="checkbox" value="parking" id="parking" /> <label for="parking"> Parking</label></p><br>
         </div>
       </div>
     <div class="listings-set">
         <div class="listing">
             <div class="listhead"> 
- <form id="searchbox" action="">
-                
+ <form id="searchbox" action="">            
         </form>
               # of Results | Sort by: Rent Distance Availability</div>
             <div class="listbody">
+              <div id="listhold1">
+              <div class="listholder-stacked">
+                <div class="stack1">
+                  <div class="stackadd">123 Main Street</div>
+                  <div class="money-icons">img placeholder</div>
+                  <div class="listedby">Listed By: xxxxxxxxx</div>
+                </div>
+                <div class="stack2">
+                  2222
+                </div>
+                <div class="stack3">
+                  <div class="stackadd">123 Main Street</div>
+                  <div class="money-icons">img placeholder</div>
+                  <div class="listedby">Listed By: xxxxxxxxx</div>
+                </div>
+              </div>
+            </div>
+            <div class="listhold2">
               <%  @listings.each do |listing| %>
                 <div class="listholder">
                   <div class="list-photo">
@@ -71,7 +68,7 @@
                   </div>
                   <div class="list-details">
                     <div class="list-desc">
-                      <strong>Description:</strong><%= listing.unit_description %><br>
+                      <strong></strong><%= listing.unit_description %><br>
                       <strong>Address:</strong> <%= listing.address %><br>
                       <strong>Beds:</strong> <%= listing.beds %> |  
                       <strong>Baths:</strong> <%= listing.bath %><br>
@@ -95,6 +92,7 @@
                   </div>
                </div>
            <% end %>
+         </div>
              <div class="listfoot">Listings # 1 of 2</div>
         </div>
       </div>
